# EtherealEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
editor/editor_core/gui/: gui.cpp  gui.h
editor/editor_core/nativefd/: filedialog.cpp  filedialog.h
editor/editor_runtime/: main.cpp
editor/editor_runtime/assets/: asset_compiler.cpp  asset_compiler.h  asset_extensions.h  mesh_importer.cpp  mesh_importer.h
editor/editor_runtime/console/: console_log.cpp  console_log.h
editor/editor_runtime/editing/: editing_system.cpp  editing_system.h  picking_system.cpp  picking_system.h
editor/editor_runtime/interface/: gui_system.cpp  gui_system.h
editor/editor_runtime/rendering/: debugdraw_system.cpp  debugdraw_system.h
editor/editor_runtime/system/: app.cpp  app.h  events.cpp  events.h  project_manager.cpp  project_manager.h  standalone.cpp  standalone.h
engine/core/: CMakeLists.txt
engine/core/audio/: device.cpp  device.h  exception.h  listener.cpp  listener.h  logger.cpp  logger.h  sound.cpp  sound.h  sound_data.cpp  sound_data.h  sound_info.h  source.cpp  source.h  types.h  utils.cpp  utils.h
engine/core/cmd_line/: parser.hpp
engine/core/common/: assert.hpp  basetypes.hpp  bitflags.hpp  hash.hpp
engine/core/console/: console.cpp  console.h
engine/core/filesystem/: filesystem.cpp  filesystem.h  filesystem_cache.hpp  filesystem_syncer.cpp  filesystem_syncer.h  filesystem_watcher.cpp  filesystem_watcher.h
engine/core/physics/: CMakeLists.txt  bullet_includes.h  collider.cpp  collider.h  rigidbody.h
engine/runtime/: CMakeLists.txt
(+431 files in other folders)
